fix(ffe-system-message): use `break-all` to wrap words

--- a/packages/ffe-system-message/less/system-message.less
+++ b/packages/ffe-system-message/less/system-message.less
@@ -149,7 +149,7 @@
         padding: 0;
         font-size: 0.875rem;
         flex: 1 1 auto;
-        word-break: break-word;
+        word-break: break-all;
         hyphens: auto;
 
         @media (min-width: 600px) {
